runtime improvements